--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>CV</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/home.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -32,14 +35,14 @@
             <h2>Projekt</h2>
             <div class="cards">
                 <div class="card">
-                    <h3>Projekt n</h3>
+                    <h3>Landing page</h3>
                     <img src="./images/project-picture.jpg" alt="project picture">
-                    <a href="#">Link</a>
+                    <a href="https://github.com/sbwinberg/Project-Landing-Page" target="_blank">Link</a>
                 </div>
                 <div class="card">
-                    <h3>Projekt n</h3>
-                    <img src="./images/project-picture.jpg" alt="project picture">
-                    <a href="#">Link</a>
+                    <h3>TIC-TAC-TOE</h3>
+                    <img src="./images/tic-tac-toe-game.svg" alt="project picture" class="tic-tac-toe">
+                    <a href="https://github.com/sbwinberg/tic-tac-toe" target="_blank">Link</a>
                 </div>
                 <div class="card">
                     <h3>Projekt n</h3>
