fix form reference

--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,8 @@
                 <input type="text" id="name" name="name" maxlength="40" placeholder="För- och Efternamn"
                 pattern="^^[a-zA-Z]{3,}( {1,2}[a-zA-Z]{3,}){1,}$">
                 <input type="email" id="email" name="email" maxlength="40" placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
-                <textarea name="message" id="message" cols="30" rows="10" form="user-form" placeholder="Meddelande..."></textarea>
-                <input type="submit" value="Skicka" id="submit-button" form="user-form">
+                <textarea name="message" id="message" cols="30" rows="10" form="message-form" placeholder="Meddelande..."></textarea>
+                <input type="submit" value="Skicka" id="submit-button" form="message-form">
             </form>
         </section>
     </main>
