fix file structure and img links

--- a/html/contact.html
+++ b/html/contact.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kontakt</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/contact.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/contact.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400;500;600&display=swap" rel="stylesheet">
+    <script src="../js/app.js" defer></script>
 </head>
 <body>
     <header>
@@ -24,11 +25,11 @@
     <main>
         <section class="contact-info">
             <h3>Kontakta mig:</h3>
-            <p><img src="./images/icons8-phone-50.png" alt="phone icon">(+46)491 570 006</p>
-            <p><img src="./images/icons8-email-100.png" alt="email icon">emil.winberg@chasacademy.se</p>
-            <p><img src="./images/icons8-location-50.png" alt="location icon">123 ELF ROAD, NORTH POLE</p>
-            <a href=""><img src="./images/icons8-linkedin-50.png" alt="phone icon">LINKEDIN</a>
-            <a href=""><img src="./images/icons8-github-50.png" alt="phone icon">GITHUB</a>
+            <p><img src="../images/icons8-phone-50.png" alt="phone icon">(+46)491 570 006</p>
+            <p><img src="../images/icons8-email-100.png" alt="email icon">emil.winberg@chasacademy.se</p>
+            <p><img src="../images/icons8-location-50.png" alt="location icon">123 ELF ROAD, NORTH POLE</p>
+            <a href=""><img src="../images/icons8-linkedin-50.png" alt="phone icon">LINKEDIN</a>
+            <a href=""><img src="../images/icons8-github-50.png" alt="phone icon">GITHUB</a>
         </section>
         <section class="message">
             <form action="#" class="message-form">
@@ -42,9 +43,9 @@
         </section>
     </main>
     <footer>
-        <a href="https://www.linkedin.com/in/emil-winberg-028965123/"><img src="./images/iconmonstr-linkedin-3.svg" alt="Linked-in"></a>
-        <a href="mailto:emil.winberg@chasacademy.se"><img src="./images/Gmail_icon_(2020).svg.png" alt="Email"></a>
-        <a href="https://github.com/sbwinberg"><img src="./images/github-mark.svg" alt="GitHub"></a>
+        <a href="https://www.linkedin.com/in/emil-winberg-028965123/"><img src="../images/iconmonstr-linkedin-3.svg" alt="Linked-in"></a>
+        <a href="mailto:emil.winberg@chasacademy.se"><img src="../images/Gmail_icon_(2020).svg.png" alt="Email"></a>
+        <a href="https://github.com/sbwinberg"><img src="../images/github-mark.svg" alt="GitHub"></a>
     </footer>
 </body>
 </html>
