--- a/html/cv.html
+++ b/html/cv.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Om mig</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/cv.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/cv.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400;500;600&display=swap" rel="stylesheet">
+    <script src="../js/app.js" defer></script>
 </head>
 <body>
     <header>
@@ -31,23 +32,23 @@
             <div class="cards">
                 <div class="card">
                     <h4>Naturvetenskap</h4>
-                    <a href="https://www.minervagymnasium.se/" target="_blank"><img src="./images/Minervagymnasium_Ikon_Vit.png" alt="minervagymnasium logo" class="white-to-black"></a>
+                    <a href="https://www.minervagymnasium.se/" target="_blank"><img src="../images/Minervagymnasium_Ikon_Vit.png" alt="minervagymnasium logo" class="white-to-black"></a>
                 </div>
                 <div class="card">
                     <h4>Marinvetenskap</h4>
-                    <a href="https://www.gu.se/studera/hitta-utbildning/marin-vetenskap-kandidatprogram-n1mav" target="_blank"><img src="./images/LO_GU_SV_flag.png" alt="Göteborgs universitet logo"></a>
+                    <a href="https://www.gu.se/studera/hitta-utbildning/marin-vetenskap-kandidatprogram-n1mav" target="_blank"><img src="../images/LO_GU_SV_flag.png" alt="Göteborgs universitet logo"></a>
                 </div>
                 <div class="card">
                     <h4>Java</h4>
-                    <a href="https://www.ltu.se/edu/course/D00/D0017D/D0017D-Inledande-programmering-i-Java-1.67717" target="_blank"><img src="./images/1200px-LTU_logo.svg.png" alt="Luleå tekniska universitet logo" class="color-to-black"></a>
+                    <a href="https://www.ltu.se/edu/course/D00/D0017D/D0017D-Inledande-programmering-i-Java-1.67717" target="_blank"><img src="../images/1200px-LTU_logo.svg.png" alt="Luleå tekniska universitet logo" class="color-to-black"></a>
                 </div>
                 <div class="card">
                     <h4>Fullstack Javascript</h4>
-                    <a href="https://chasacademy.se/program/fullstackutvecklare-javascript-flera-studieorter" target="_blank"><img src="./images/chas-academy-logo.png" alt="chas academy logo" class="white-to-black"></a>
+                    <a href="https://chasacademy.se/program/fullstackutvecklare-javascript-flera-studieorter" target="_blank"><img src="../images/chas-academy-logo.png" alt="chas academy logo" class="white-to-black"></a>
                 </div>
                 <div class="card">
                     <h4>The Odin Project</h4>
-                    <a href="https://www.theodinproject.com/" target="_blank"><img src="./images/odin-lined.png" alt="The odin project logo" class="white-to-black"></a>
+                    <a href="https://www.theodinproject.com/" target="_blank"><img src="../images/odin-lined.png" alt="The odin project logo" class="white-to-black"></a>
                 </div>
             </div>
         </section>
@@ -56,27 +57,27 @@
             <div class="cards">
                 <div class="card">
                     <h4>LIDL</h4>
-                    <a href="https://www.lidl.se/" target="_blank"><img src="./images/lidl-logo-blanco.png" alt="LIDL logo" class="white-to-black"></a>
+                    <a href="https://www.lidl.se/" target="_blank"><img src="../images/lidl-logo-blanco.png" alt="LIDL logo" class="white-to-black"></a>
                 </div>
                 <div class="card">
                     <h4>Sibylla</h4>
-                    <a href="https://www.sibylla.se/" target="_blank"><img src="./images/Sibylla_logo.svg.png" alt="Sibylla logo" class="color-to-black"></a>
+                    <a href="https://www.sibylla.se/" target="_blank"><img src="../images/Sibylla_logo.svg.png" alt="Sibylla logo" class="color-to-black"></a>
                 </div>
                 <div class="card">
                     <h4>Biltema</h4>
-                    <a href="https://www.biltema.se/" target="_blank"><img src="./images/Biltema_logo.svg.png" alt="Biltema logo" class="color-to-black"></a>
+                    <a href="https://www.biltema.se/" target="_blank"><img src="../images/Biltema_logo.svg.png" alt="Biltema logo" class="color-to-black"></a>
                 </div>
                 <div class="card">
                     <h4>ICA</h4>
-                    <a href="https://www.ica.se/" target="_blank"><img src="./images/ICA-logotyp.png" alt="chas academy logo" class="color-to-black"></a>
+                    <a href="https://www.ica.se/" target="_blank"><img src="../images/ICA-logotyp.png" alt="chas academy logo" class="color-to-black"></a>
                 </div>
             </div>
         </section>
     </main>
     <footer>
-        <a href="https://www.linkedin.com/in/emil-winberg-028965123/"><img src="./images/iconmonstr-linkedin-3.svg" alt="Linked-in"></a>
-        <a href="mailto:emil.winberg@chasacademy.se"><img src="./images/Gmail_icon_(2020).svg.png" alt="Email"></a>
-        <a href="https://github.com/sbwinberg"><img src="./images/github-mark.svg" alt="GitHub"></a>
+        <a href="https://www.linkedin.com/in/emil-winberg-028965123/"><img src="../images/iconmonstr-linkedin-3.svg" alt="Linked-in"></a>
+        <a href="mailto:emil.winberg@chasacademy.se"><img src="../images/Gmail_icon_(2020).svg.png" alt="Email"></a>
+        <a href="https://github.com/sbwinberg"><img src="../images/github-mark.svg" alt="GitHub"></a>
     </footer>
 </body>
 </html>
