Create cards dynamically

--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400;500;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
-    <script src="../js/app.js" defer></script>
+    <script src="../js/app.js" type="module" defer></script>
 </head>
 <body>
     <header>
@@ -42,7 +42,7 @@
         </section>
         <section class="project-section">
             <h2>Projekt</h2>
-            <div class="cards">
+            <div class="project-cards">
                 <div class="card">
                     <h3>Landing page</h3>
                     <img src="../images/project-picture.jpg" alt="project picture">
