--- a/html/cv.html
+++ b/html/cv.html
@@ -9,69 +9,38 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400;500;600&display=swap" rel="stylesheet">
-    <script src="../js/app.js" defer></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
+    <script src="../js/app.js" type="module" defer></script>
 </head>
 <body>
+    <div class="overlay hidden"></div>
     <header>
         <h1>Emil Winberg</h1>
         <nav>
-            <ul class="header-navigation">
+            <ul class="header-navigation menu">
                 <li><a href="./index.html" class="home">Hem</a></li>
                 <li><a href="./cv.html" class="cv">CV</a></li>
                 <li><a href="./contact.html" class="contact">Kontakt</a></li>
             </ul>
         </nav>
+        <button class="hamburger">
+            <i class="menuIcon material-icons">menu</i>
+            <i class="closeIcon material-icons">close</i>
+        </button>
     </header>
     <main>
         <section class="about">
             <h2>Om mig</h2>
-            <p>Jag började min universitetskarriär på kandidatprogrammet i marin vetenskap. Under min tid som marinvetenskaplig student utvecklade jag en passion för programmering och teknik. Jag har därför beslutat att byta spår och har sedan dess ägnat mig åt att läsa kurser, bygga egna projekt och har nu landat på programmet "Fullstack Javascript-utvecklare på Chas Academy. Jag har under den här tiden lärt mig flera programmeringsspråk, inklusive Javascript, HTML, CSS och Java. Allt för att bygga upp mina färdigheter inom programmering, för att förstå min potential och se vilka möjligheter som finns inom branchen. Mitt mål är att säkra en position inom programutveckling, där jag kan använda min tekniska kompetens och kreativitet för att vara med och skapa projekt som jag verkligen brinner för och som ger mig möjligheten att fortsätta utvecklas i min roll som utvecklare.</p>
+            <p>Jag började min universitetskarriär på kandidatprogrammet i marina vetenskaper. Under min tid som marinvetenskaplig student utvecklade jag en passion för programmering och teknik. Jag har därför beslutat att byta spår och har sedan dess ägnat mig åt att läsa kurser, bygga egna projekt och har nu landat på programmet "Fullstack Javascript-utvecklare på Chas Academy. Jag har under den här tiden lärt mig flera programmeringsspråk, inklusive Javascript, HTML, CSS och Java. Allt för att bygga upp mina färdigheter inom programmering, för att förstå min potential och se vilka möjligheter som finns inom branchen. Mitt mål är att säkra en position inom programutveckling, där jag kan använda min tekniska kompetens och kreativitet för att vara med och skapa projekt som jag verkligen brinner för och som ger mig möjligheten att fortsätta utvecklas i min roll som utvecklare.</p>
         </section>
         <section class="education">
             <h2>Utbildning</h2>
-            <div class="cards">
-                <div class="card">
-                    <h4>Naturvetenskap</h4>
-                    <a href="https://www.minervagymnasium.se/" target="_blank"><img src="../images/Minervagymnasium_Ikon_Vit.png" alt="minervagymnasium logo" class="white-to-black"></a>
-                </div>
-                <div class="card">
-                    <h4>Marinvetenskap</h4>
-                    <a href="https://www.gu.se/studera/hitta-utbildning/marin-vetenskap-kandidatprogram-n1mav" target="_blank"><img src="../images/LO_GU_SV_flag.png" alt="Göteborgs universitet logo"></a>
-                </div>
-                <div class="card">
-                    <h4>Java</h4>
-                    <a href="https://www.ltu.se/edu/course/D00/D0017D/D0017D-Inledande-programmering-i-Java-1.67717" target="_blank"><img src="../images/1200px-LTU_logo.svg.png" alt="Luleå tekniska universitet logo" class="color-to-black"></a>
-                </div>
-                <div class="card">
-                    <h4>Fullstack Javascript</h4>
-                    <a href="https://chasacademy.se/program/fullstackutvecklare-javascript-flera-studieorter" target="_blank"><img src="../images/chas-academy-logo.png" alt="chas academy logo" class="white-to-black"></a>
-                </div>
-                <div class="card">
-                    <h4>The Odin Project</h4>
-                    <a href="https://www.theodinproject.com/" target="_blank"><img src="../images/odin-lined.png" alt="The odin project logo" class="white-to-black"></a>
-                </div>
-            </div>
+            <div class=" cards edu"></div>
         </section>
-        <section class="work">
+        <section class="jobs">
             <h2>Jobb</h2>
-            <div class="cards">
-                <div class="card">
-                    <h4>LIDL</h4>
-                    <a href="https://www.lidl.se/" target="_blank"><img src="../images/lidl-logo-blanco.png" alt="LIDL logo" class="white-to-black"></a>
-                </div>
-                <div class="card">
-                    <h4>Sibylla</h4>
-                    <a href="https://www.sibylla.se/" target="_blank"><img src="../images/Sibylla_logo.svg.png" alt="Sibylla logo" class="color-to-black"></a>
-                </div>
-                <div class="card">
-                    <h4>Biltema</h4>
-                    <a href="https://www.biltema.se/" target="_blank"><img src="../images/Biltema_logo.svg.png" alt="Biltema logo" class="color-to-black"></a>
-                </div>
-                <div class="card">
-                    <h4>ICA</h4>
-                    <a href="https://www.ica.se/" target="_blank"><img src="../images/ICA-logotyp.png" alt="chas academy logo" class="color-to-black"></a>
-                </div>
-            </div>
+            <div class="cards work"></div>
         </section>
     </main>
     <footer>
