dynamic modals and cleanup

--- a/html/cv.html
+++ b/html/cv.html
@@ -14,7 +14,7 @@
     <script src="../js/app.js" type="module" defer></script>
 </head>
 <body>
-    <div class="overlay hidden"></div>
+    <!-- <div class="overlay hidden"></div> -->
     <header>
         <h1>Emil Winberg</h1>
         <nav>
@@ -29,7 +29,7 @@
             <i class="closeIcon material-icons">close</i>
         </button>
     </header>
-    <main>
+    <main class="main">
         <section class="about">
             <h2>Om mig</h2>
             <p>Jag började min universitetskarriär på kandidatprogrammet i marina vetenskaper. Under min tid som marinvetenskaplig student utvecklade jag en passion för programmering och teknik. Jag har därför beslutat att byta spår och har sedan dess ägnat mig åt att läsa kurser, bygga egna projekt och har nu landat på programmet "Fullstack Javascript-utvecklare på Chas Academy. Jag har under den här tiden lärt mig flera programmeringsspråk, inklusive Javascript, HTML, CSS och Java. Allt för att bygga upp mina färdigheter inom programmering, för att förstå min potential och se vilka möjligheter som finns inom branchen. Mitt mål är att säkra en position inom programutveckling, där jag kan använda min tekniska kompetens och kreativitet för att vara med och skapa projekt som jag verkligen brinner för och som ger mig möjligheten att fortsätta utvecklas i min roll som utvecklare.</p>
@@ -42,6 +42,7 @@
             <h2>Jobb</h2>
             <div class="cards work"></div>
         </section>
+        <section class="modals"></section>
     </main>
     <footer>
         <a href="https://www.linkedin.com/in/emil-winberg-028965123/"><img src="../images/iconmonstr-linkedin-3.svg" alt="Linked-in"></a>
