add working modal without content

--- a/html/cv.html
+++ b/html/cv.html
@@ -42,7 +42,11 @@
             <h2>Jobb</h2>
             <div class="cards work"></div>
         </section>
-        <section class="modals"></section>
+        <dialog data-modal>
+            <h3>This is my modal</h3>
+            <p>Some text here</p>
+            <button data-close-modal>Close</button>
+        </dialog>
     </main>
     <footer>
         <a href="https://www.linkedin.com/in/emil-winberg-028965123/"><img src="../images/iconmonstr-linkedin-3.svg" alt="Linked-in"></a>
