Add dynamically created working ḿodules

--- a/html/cv.html
+++ b/html/cv.html
@@ -42,11 +42,13 @@
             <h2>Jobb</h2>
             <div class="cards work"></div>
         </section>
-        <dialog data-modal>
-            <h3>This is my modal</h3>
-            <p>Some text here</p>
-            <button data-close-modal>Close</button>
-        </dialog>
+        <!-- <dialog data-modal>
+            <h2 class="modalName">This is my modal</h2>
+            <h3 class="modalTitle"></h3>
+            <h4 class="modalYear"></h4>
+            <p class="modalDescription">Some text here</p>
+            <button data-close-modal class="close material-icons md-36">close</button>
+        </dialog> -->
     </main>
     <footer>
         <a href="https://www.linkedin.com/in/emil-winberg-028965123/"><img src="../images/iconmonstr-linkedin-3.svg" alt="Linked-in"></a>
