--- a/html/cv.html
+++ b/html/cv.html
@@ -11,24 +11,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400;500;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
-    <script src="../js/app.js" type="module" defer></script>
+    <script src="../js/default.js" defer></script>
+    <script src="../js/cv.js" type="module" defer></script>
 </head>
 <body>
     <!-- <div class="overlay hidden"></div> -->
     <header>
-        <h1>Emil Winberg</h1>
-        <nav>
-            <ul class="header-navigation menu">
-                <li><a href="./index.html" class="home">Hem</a></li>
-                <li><a href="./cv.html" class="cv">CV</a></li>
-                <li><a href="./contact.html" class="contact">Kontakt</a></li>
-            </ul>
-        </nav>
-        <button class="hamburger">
-            <i class="menuIcon material-icons">menu</i>
-            <i class="closeIcon material-icons">close</i>
-        </button>
+        <h1 class="title">Emil Winberg</h1>
     </header>
+    <div class="navLinks">
+        <nav class="full-screen-nav">
+            <div class="backdrop">
+                <ul>
+                    <li>
+                        <a href="./index.html" class="home"><i class="material-icons">home</i>Hem</a>
+                    </li>
+                    <li>
+                        <a href="./cv.html" class="cv"><i class="material-icons">person</i>CV</a>
+                    </li>
+                    <li>
+                        <a href="./contact.html" class="contact"><i class="material-icons">chat</i>Kontakt</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+		<div class="content">
+			<button class="trigger"><i class="material-icons md-36 white">menu</i></button>
+		</div>
+    </div>
     <main class="main">
         <section class="about">
             <h2>Om mig</h2>
@@ -44,9 +54,11 @@
         </section>
     </main>
     <footer>
-        <a href="https://www.linkedin.com/in/emil-winberg-028965123/"><img src="../images/iconmonstr-linkedin-3.svg" alt="Linked-in"></a>
-        <a href="mailto:emil.winberg@chasacademy.se"><img src="../images/Gmail_icon_(2020).svg.png" alt="Email"></a>
-        <a href="https://github.com/sbwinberg"><img src="../images/github-mark.svg" alt="GitHub"></a>
+        <div class="footer-links">
+            <a href="https://www.linkedin.com/in/emil-winberg-028965123/"><img src="../images/iconmonstr-linkedin-3.svg" alt="Linked-in"></a>
+            <a href="mailto:emil.winberg@chasacademy.se"><img src="../images/Gmail_icon_(2020).svg.png" alt="Email"></a>
+            <a href="https://github.com/sbwinberg"><img src="../images/github-mark.svg" alt="GitHub"></a>
+        </div>
     </footer>
 </body>
 </html>
