Animate profile picture and minor fixes

--- a/html/cv.html
+++ b/html/cv.html
@@ -15,22 +15,21 @@
     <script src="../js/default.js" defer></script>
 </head>
 <body>
-    <!-- <div class="overlay hidden"></div> -->
     <header>
-        <h1 class="title">Emil Winberg</h1>
+        <h1 class="title bannerStyle">Emil Winberg</h1>
     </header>
     <div class="navLinks">
         <nav class="full-screen-nav">
             <div class="backdrop">
                 <ul>
                     <li>
-                        <a href="./index.html" class="home"><i class="material-icons">home</i>Hem</a>
+                        <a href="./index.html" class="home"><i class="material-icons md-36 inline-icon">home</i>Hem</a>
                     </li>
                     <li>
-                        <a href="./cv.html" class="cv"><i class="material-icons">person</i>CV</a>
+                        <a href="./cv.html" class="cv"><i class="material-icons md-36 inline-icon">person</i>CV</a>
                     </li>
                     <li>
-                        <a href="./contact.html" class="contact"><i class="material-icons">chat</i>Kontakt</a>
+                        <a href="./contact.html" class="contact"><i class="material-icons md-36 inline-icon">chat</i>Kontakt</a>
                     </li>
                 </ul>
             </div>
@@ -41,20 +40,26 @@
     </div>
     <main class="main">
         <section class="about">
-            <h2>Om mig</h2>
+            <div class="banner">
+                <h2 class="bannerStyle">Om mig</h2>
+            </div>
             <p>Jag började min universitetskarriär på kandidatprogrammet i marina vetenskaper. Under min tid som marinvetenskaplig student utvecklade jag en passion för programmering och teknik. Jag har därför beslutat att byta spår och har sedan dess ägnat mig åt att läsa kurser, bygga egna projekt och har nu landat på programmet "Fullstack Javascript-utvecklare på Chas Academy. Jag har under den här tiden lärt mig flera programmeringsspråk, inklusive Javascript, HTML, CSS och Java. Allt för att bygga upp mina färdigheter inom programmering, för att förstå min potential och se vilka möjligheter som finns inom branchen. Mitt mål är att säkra en position inom programutveckling, där jag kan använda min tekniska kompetens och kreativitet för att vara med och skapa projekt som jag verkligen brinner för och som ger mig möjligheten att fortsätta utvecklas i min roll som utvecklare.</p>
         </section>
         <section class="education">
-            <h2>Utbildning</h2>
+            <div class="banner">
+                <h2 class="bannerStyle">Utbildningar</h2>
+            </div>
             <div class=" cards edu"></div>
         </section>
         <section class="jobs">
-            <h2>Jobb</h2>
+            <div class="banner">
+                <h2 class="bannerStyle">Jobb</h2>
+            </div>
             <div class="cards work"></div>
         </section>
     </main>
     <footer>
-        <div class="footer-links">
+        <div class="footer-links bannerStyle">
             <a href="https://www.linkedin.com/in/emil-winberg-028965123/"><img src="../images/iconmonstr-linkedin-3.svg" alt="Linked-in"></a>
             <a href="mailto:emil.winberg@chasacademy.se"><img src="../images/Gmail_icon_(2020).svg.png" alt="Email"></a>
             <a href="https://github.com/sbwinberg"><img src="../images/github-mark.svg" alt="GitHub"></a>
