--- a/html/contact.html
+++ b/html/contact.html
@@ -12,24 +12,24 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
     <script src="../js/default.js" defer></script>
-    <script src="../js/app.js" defer></script>
+    <!-- <script src="../js/app.js" defer></script> -->
 </head>
 <body>
     <header>
-        <h1 class="title">Emil Winberg</h1>
+        <h1 class="title bannerStyle">Emil Winberg</h1>
     </header>
     <div class="navLinks">
         <nav class="full-screen-nav">
             <div class="backdrop">
                 <ul>
                     <li>
-                        <a href="./index.html" class="home"><i class="material-icons">home</i>Hem</a>
+                        <a href="./index.html" class="home"><i class="material-icons md-36 inline-icon">home</i>Hem</a>
                     </li>
                     <li>
-                        <a href="./cv.html" class="cv"><i class="material-icons">person</i>CV</a>
+                        <a href="./cv.html" class="cv"><i class="material-icons md-36 inline-icon">person</i>CV</a>
                     </li>
                     <li>
-                        <a href="./contact.html" class="contact"><i class="material-icons">chat</i>Kontakt</a>
+                        <a href="./contact.html" class="contact"><i class="material-icons md-36 inline-icon">chat</i>Kontakt</a>
                     </li>
                 </ul>
             </div>
@@ -59,7 +59,7 @@
         </section>
     </main>
     <footer>
-        <div class="footer-links">
+        <div class="footer-links bannerStyle">
             <a href="https://www.linkedin.com/in/emil-winberg-028965123/"><img src="../images/iconmonstr-linkedin-3.svg" alt="Linked-in"></a>
             <a href="mailto:emil.winberg@chasacademy.se"><img src="../images/Gmail_icon_(2020).svg.png" alt="Email"></a>
             <a href="https://github.com/sbwinberg"><img src="../images/github-mark.svg" alt="GitHub"></a>
