Style homepage with margins and dynamic text

--- a/html/contact.html
+++ b/html/contact.html
@@ -15,7 +15,7 @@
     <!-- <script src="../js/app.js" defer></script> -->
 </head>
 <body>
-    <header>
+    <header class="banner">
         <h1 class="title bannerStyle">Emil Winberg</h1>
     </header>
     <div class="navLinks">
