--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
     <script src="../js/home.js" type="module" defer></script>
 </head>
 <body>
-    <header>
+    <header class="banner">
         <h1 class="title bannerStyle">Emil Winberg</h1>
     </header>
     <div class="navLinks">
@@ -41,7 +41,7 @@
     </div>
     <main>
         <section class="profile-section">
-            <figure class="image-wrapper">
+            <figure class="image-wrapper hover-frame">
                 <a href="./cv.html"><button>Vad gör jag?</button></a>
                 <img src="../images/profile-picture.jpeg" alt="profile-picture">
             </figure>
@@ -96,6 +96,4 @@
 
 
 <!-- STYLE CARDS WITH FADING BORDER, GRAY BACKGROUND, FULL IMAGE AND LINKS -->
-<!-- FIX PROFILE SECTION STYLING AND RESPONSIVENESS -->
-<!-- STYLE PROJECT BORDER TO MATCH HEADER -->
 <!-- DYNAMIC PROJECT CARDS WITH JS AND JSON (API FROM GITHUB)-->
