--- a/html/cv.html
+++ b/html/cv.html
@@ -15,7 +15,7 @@
     <script src="../js/default.js" defer></script>
 </head>
 <body>
-    <header>
+    <header class="banner">
         <h1 class="title bannerStyle">Emil Winberg</h1>
     </header>
     <div class="navLinks">
