Fix padding and margins on CVpage

--- a/html/contact.html
+++ b/html/contact.html
@@ -11,7 +11,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400;500;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
-    <script src="../js/default.js" defer></script>
     <!-- <script src="../js/app.js" defer></script> -->
 </head>
 <body>
@@ -48,7 +47,7 @@
             <a href=""><img src="../images/icons8-github-50.png" alt="phone icon">GITHUB</a>
         </section>
         <section class="message">
-            <form action="#" class="message-form">
+            <form action="#" id="message-form">
                 <h3>Eller skicka ett meddelande</h3>
                 <input type="text" id="name" name="name" maxlength="40" placeholder="För- och Efternamn"
                 pattern="^^[a-zA-Z]{3,}( {1,2}[a-zA-Z]{3,}){1,}$">
@@ -65,5 +64,7 @@
             <a href="https://github.com/sbwinberg"><img src="../images/github-mark.svg" alt="GitHub"></a>
         </div>
     </footer>
+
+    <script src="../js/default.js" ></script>
 </body>
 </html>
