--- a/html/cv.html
+++ b/html/cv.html
@@ -11,8 +11,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400;500;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
-    <script src="../js/cv.js" type="module" defer></script>
-    <script src="../js/default.js" defer></script>
 </head>
 <body>
     <header class="banner">
@@ -65,5 +63,7 @@
             <a href="https://github.com/sbwinberg"><img src="../images/github-mark.svg" alt="GitHub"></a>
         </div>
     </footer>
+    <script src="../js/cv.js" type="module"></script>
+    <script src="../js/default.js"></script>
 </body>
 </html>
