--- a/html/index.html
+++ b/html/index.html
@@ -12,8 +12,6 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
     <!-- <link rel="stylesheet" href="../fa/font-awesome-4.7.0/css/font-awesome.min.css"> -->
-    <script src="../js/default.js" defer></script>
-    <script src="../js/home.js" type="module" defer></script>
 </head>
 <body>
     <header class="banner">
@@ -40,9 +38,9 @@
 		</div>
     </div>
     <main>
-        <section class="profile-section">
+        <div class="profile-section">
             <figure class="image-wrapper hover-frame">
-                <a href="./cv.html"><button>Vad gör jag?</button></a>
+                <a href="./cv.html"><div>Vad gör jag?</div></a>
                 <img src="../images/profile-picture.jpeg" alt="profile-picture">
             </figure>
             <div class="text-wrapper">
@@ -52,7 +50,7 @@
                     Jag tror på att sprida glädje och positivitet i mitt liv och omgivning. Att vara glad är smittsamt, och jag strävar efter att sprida den glädjen till de människor jag möter varje dag. Mitt engagemang och nyfikenhet driver mig att upptäcka nya möjligheter och dela min entusiasm med världen omkring mig.<br><br>
                     <span class="author">- ChatGPT, om Emil</span></p>
             </div>
-        </section>
+        </div>
         <section class="project-section">
             <div class="banner">
                 <h2 class="bannerStyle">Projekt</h2>
@@ -88,6 +86,8 @@
             <a href="https://github.com/sbwinberg"><img src="../images/github-mark.svg" alt="GitHub"></a>
         </div>
     </footer>
+    <script src="../js/home.js" type="module"></script>
+    <script src="../js/default.js" ></script>
 </body>
 </html>
 
