Add project scroller for mobile

--- a/html/index.html
+++ b/html/index.html
@@ -55,23 +55,33 @@
             <div class="banner">
                 <h2 class="bannerStyle">Projekt</h2>
             </div>
-            <div class="project-cards">
-                <div class="card">
+            <div class="project-cards media-scroller">
+                <div class="card media-element">
                     <h3>Landing page</h3>
                     <img src="../images/project-picture.jpg" alt="project picture">
                     <a href="https://github.com/sbwinberg/Project-Landing-Page" target="_blank">Link</a>
                 </div>
-                <div class="card">
+                <div class="card media-element">
                     <h3>TIC-TAC-TOE</h3>
                     <img src="../images/tic-tac-toe-game.svg" alt="project picture" class="tic-tac-toe">
                     <a href="https://github.com/sbwinberg/tic-tac-toe" target="_blank">Link</a>
                 </div>
-                <div class="card">
+                <div class="card media-element">
                     <h3>Projekt n</h3>
                     <img src="../images/project-picture.jpg" alt="project picture">
                     <a href="#">Link</a>
                 </div>
-                <div class="card">
+                <div class="card media-element">
+                    <h3>Projekt n</h3>
+                    <img src="../images/project-picture.jpg" alt="project picture">
+                    <a href="#">Link</a>
+                </div>
+                <div class="card media-element">
+                    <h3>Projekt n</h3>
+                    <img src="../images/project-picture.jpg" alt="project picture">
+                    <a href="#">Link</a>
+                </div>
+                <div class="card media-element">
                     <h3>Projekt n</h3>
                     <img src="../images/project-picture.jpg" alt="project picture">
                     <a href="#">Link</a>
