--- a/html/cv.html
+++ b/html/cv.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400;500;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
+    <link rel="stylesheet" href="../css/media.css">
 </head>
 <body>
     <header class="banner">
