--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400;500;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
-    <!-- <link rel="stylesheet" href="../fa/font-awesome-4.7.0/css/font-awesome.min.css"> -->
+    <link rel="stylesheet" href="../css/media.css">
+    </link>
 </head>
 <body>
     <header class="banner">
