delete old contact layout

--- a/html/contact.html
+++ b/html/contact.html
@@ -42,13 +42,17 @@
 
 
     <main>
-        <section class="contact-info">
-            <h3>Kontakta mig:</h3>
-            <p><img src="../images/icons8-phone-50.png" alt="phone icon">(+46)491 570 006</p>
-            <p><img src="../images/icons8-email-100.png" alt="email icon">emil.winberg@chasacademy.se</p>
-            <p><img src="../images/icons8-location-50.png" alt="location icon">123 ELF ROAD, NORTH POLE</p>
-            <a href=""><img src="../images/icons8-linkedin-50.png" alt="phone icon">LINKEDIN</a>
-            <a href=""><img src="../images/icons8-github-50.png" alt="phone icon">GITHUB</a>
+        <section class="contact-section">
+            <div class="banner">
+                <h2 class="bannerStyle">Kontakta mig</h2>
+            </div>
+            <div class="contact-info">
+                <p><img src="../images/icons8-phone-50.png" alt="phone icon">(+46)491 570 006</p>
+                <p><img src="../images/icons8-email-100.png" alt="email icon">emil.winberg@chasacademy.se</p>
+                <p><img src="../images/icons8-location-50.png" alt="location icon">123 ELF ROAD, NORTH POLE</p>
+                <a href=""><img src="../images/icons8-linkedin-50.png" alt="phone icon">LINKEDIN</a>
+                <a href=""><img src="../images/icons8-github-50.png" alt="phone icon">GITHUB</a>
+            </div>
         </section>
         <section class="message">
             <form action="#" id="message-form">
