--- a/html/contact.html
+++ b/html/contact.html
@@ -46,19 +46,26 @@
             <div class="banner">
                 <h2 class="bannerStyle">Kontakta mig</h2>
             </div>
-            <div class="contact-info">
-                <p><img src="../images/icons8-phone-50.png" alt="phone icon">(+46)491 570 006</p>
-                <p><img src="../images/icons8-email-100.png" alt="email icon">emil.winberg@chasacademy.se</p>
-                <p><img src="../images/icons8-location-50.png" alt="location icon">123 ELF ROAD, NORTH POLE</p>
-                <a href=""><img src="../images/icons8-linkedin-50.png" alt="phone icon">LINKEDIN</a>
-                <a href=""><img src="../images/icons8-github-50.png" alt="phone icon">GITHUB</a>
+            <div class="contact-container">
+                <div class="contact-info">
+                    <p><img src="../images/icons8-phone-50.png" alt="phone icon">(+46)491 570 006</p>
+                    <p><img src="../images/icons8-email-100.png" alt="email icon">emil.winberg@chasacademy.se</p>
+                    <p><img src="../images/icons8-location-50.png" alt="location icon">123 ELF ROAD, NORTH POLE</p>
+                    <a href=""><img src="../images/icons8-linkedin-50.png" alt="phone icon">LINKEDIN</a>
+                    <a href=""><img src="../images/icons8-github-50.png" alt="phone icon">GITHUB</a>
+                </div>
+                <div id="map-container">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d154074.6807563736!2d-147.56660312322597!3d64.74414054085969!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x51324d51d5c5f2b9%3A0xda1a7714d9d98964!2sNorth%20Pole%2C%20Alaska%2C%20Alaska%2099705%2C%20USA!5e0!3m2!1ssv!2sse!4v1698833814607!5m2!1ssv!2sse" class="map" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
         </section>
-        <section class="message">
+
+        <section class="message-section">
+            <div class="banner">
+                <h2 class="bannerStyle">Eller skicka ett meddelande</h2>
+            </div>
             <form action="#" id="message-form">
-                <h3>Eller skicka ett meddelande</h3>
-                <input type="text" id="name" name="name" maxlength="40" placeholder="För- och Efternamn"
-                pattern="^^[a-zA-Z]{3,}( {1,2}[a-zA-Z]{3,}){1,}$">
+                <input type="text" id="name" name="name" maxlength="40" placeholder="För- och Efternamn">
                 <input type="email" id="email" name="email" maxlength="40" placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
                 <textarea name="message" id="message" cols="30" rows="10" form="message-form" placeholder="Meddelande..."></textarea>
                 <input type="submit" value="Skicka" id="submit-button" form="message-form">
@@ -77,6 +84,6 @@
         </div>
     </footer>
 
-    <script src="../js/default.js" ></script>
+    <script src="../js/default.js"></script>
 </body>
 </html>
