--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <title>CV</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/home.css">
@@ -12,7 +12,6 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
     <link rel="stylesheet" href="../css/media.css">
-    </link>
 </head>
 <body>
     <header class="banner">
