Sista finlir innan uppgiften släpps

--- a/html/index.html
+++ b/html/index.html
@@ -92,7 +92,7 @@
     <footer>
         <div class="footer-links bannerStyle">
             <a href="https://www.linkedin.com/in/emil-winberg-028965123/"><img src="../images/iconmonstr-linkedin-3.svg" alt="Linked-in"></a>
-            <a href="mailto:emil.winberg@chasacademy.se"><img src="../images/Gmail_icon_(2020).svg.png" alt="Email"></a>
+            <a href="mailto:emil.winberg@chasacademy.se" id="email"><img src="../images/Gmail_icon_(2020).svg.png" alt="Email"></a>
             <a href="https://github.com/sbwinberg"><img src="../images/github-mark.svg" alt="GitHub"></a>
         </div>
     </footer>
@@ -100,10 +100,3 @@
     <script src="../js/default.js" ></script>
 </body>
 </html>
-
-
-
-
-
-<!-- STYLE CARDS WITH FADING BORDER, GRAY BACKGROUND, FULL IMAGE AND LINKS -->
-<!-- DYNAMIC PROJECT CARDS WITH JS AND JSON (API FROM GITHUB)-->
