--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,7 @@
         <div class="profile-section">
             <figure class="image-wrapper hover-frame">
                 <a href="./cv.html"><div>Vad gör jag?</div></a>
-                <img src="../images/profile-picture.jpeg" alt="profile-picture">
+                <img src="../images/profile-picture.jpg" alt="profile-picture">
             </figure>
             <div class="text-wrapper">
                 <p class="profile-text">
