Start work on github api

--- a/html/index.html
+++ b/html/index.html
@@ -56,7 +56,7 @@
                 <h2 class="bannerStyle">Projekt</h2>
             </div>
             <div class="project-cards media-scroller">
-                <div class="card media-element">
+                <!-- <div class="card media-element">
                     <h3>Landing page</h3>
                     <img src="../images/project-picture.jpg" alt="project picture">
                     <a href="https://github.com/sbwinberg/Project-Landing-Page" target="_blank">Link</a>
@@ -85,7 +85,7 @@
                     <h3>Projekt n</h3>
                     <img src="../images/project-picture.jpg" alt="project picture">
                     <a href="#">Link</a>
-                </div>
+                </div> -->
             </div>
         </section>
     </main>
