add back functionality from merge conflict

--- a/html/index.html
+++ b/html/index.html
@@ -56,6 +56,8 @@
                 <h2 class="bannerStyle">Projekt</h2>
             </div>
             <div class="project-cards media-scroller">
+                <button class="carousel-button prev">&laquo;</button>
+                <button class="carousel-button next">&raquo;</button>
                 <!-- <div class="card media-element">
                     <h3>Landing page</h3>
                     <img src="../images/project-picture.jpg" alt="project picture">
