css cleanup with more classnames

--- a/html/index.html
+++ b/html/index.html
@@ -40,8 +40,8 @@
     <main>
         <div class="profile-section">
             <figure class="image-wrapper hover-frame">
-                <a href="./cv.html"><div>Vad gör jag?</div></a>
-                <img src="../images/profile-picture.jpg" alt="profile-picture">
+                <a href="./cv.html" class="hidden-link"><div>Vad gör jag?</div></a>
+                <img src="../images/profile-picture.jpg" alt="profile-picture" class="profile-picture">
             </figure>
             <div class="text-wrapper">
                 <p class="profile-text">
