readability on project title and project link buttons

--- a/html/index.html
+++ b/html/index.html
@@ -56,10 +56,16 @@
                 <h2 class="bannerStyle">Projekt</h2>
             </div>
             <div class="wrapper">
-                <div class="media-scroller">
+                <div class="media-scroller ms">
                     <button class="carousel-button prev" id="left">&laquo;</button>
                     <button class="carousel-button next" id="right">&raquo;</button>
-                    <div class="card media-element"><div class="card-bg"></div></div>
+                    <div class="card media-element">
+                        <div class="card-bg"></div>
+                        <div class="card-content">
+                            <h2 class="project-title">GitHub</h2>
+                            <a href="https://github.com/sbwinberg" target="_blank" class="project-link">Link</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
